rpi5/transmission/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: transmission
  labels:
    app: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  serviceName: transmission
  template:
    metadata:
      name: transmission
      labels:
        app: transmission
    spec:
      containers:
        - name: transmission
          image: lscr.io/linuxserver/transmission:2021.11.18@sha256:9944fcda726c9749914b06268e5435c5ba057191fde0052013c8f84c303763a4
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -c
            - |
              sleep 10 && exec /init
          ports:
            - containerPort: 9091
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
        - name: wireguard
          image: lscr.io/linuxserver/wireguard:1.0.20250521@sha256:ae0a555aa5cebfc9d510c8a7b439e210db2556e36757d10f2989b850a5e63b81
          imagePullPolicy: Always
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
            privileged: true
          volumeMounts:
            - mountPath: /config/wg_confs
              name: wg-config
      restartPolicy: Always
      volumes:
        - name: data
          hostPath:
            path: /data
            type: Directory
        - name: wg-config-src
          secret:
            secretName: wireguard-config
        - name: wg-config
          emptyDir: {}
      nodeSelector:
        kubernetes.io/hostname: odroid-h4
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
