rpi5/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
spec:
  selector:
    app: transmission
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
