rpi5/transmission/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: transmission
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`transmission.internal`)
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: transmission
          port: 80
  tls:
    secretName: transmission-cert-tls
    domains:
      - main: transmission.internal
